--- a/src/app/pages/event-page/event-page.component.html
+++ b/src/app/pages/event-page/event-page.component.html
@@ -4,7 +4,7 @@
     <mdb-tabset #staticTabs [buttonClass]="'nav-tabs tabs-3 indigo'" [contentClass]="''" *ngIf="isOwner">
       <mdb-tab heading="<i class='fa fa-picture-o'></i> Gallerie">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12" *ngIf="images">
             <br>
             <mdb-image-modal [modalImages]="images" type="margin"></mdb-image-modal>
           </div>
@@ -14,25 +14,53 @@
         <div class="row">
           <div class="col-12">
             <br>
+            <form>
+              <div class="file-field">
+                <div class="btn btn-primary btn-sm waves-light" mdbRippleRadius>
+                  <span>Bilder auswählen</span>
+                  <input type="file" (change)="detectFiles($event)" multiple>
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path" type="text" placeholder="Bilder hochladen" [value]="showFiles()">
+                </div>
+              </div>
+              <br>
+              <div *ngIf="currentUpload">
+                <mdb-progressbar [value]="currentUpload?.progress" min="0" max="100" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></mdb-progressbar>
+                Progress: {{currentUpload?.name}} | {{currentUpload?.progress}}% Hochgeladen
+              </div>
+              <br>
+              <button type="button" class="btn btn-default btn-lg btn-block waves-light" [disabled]="!selectedFiles" mdbRippleRadius (click)="uploadMulti()">Upload starten</button>
+            </form>
+            <hr>
             <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Username</th>
+                  <th>Name</th>
+                  <th>Format</th>
+                  <th>Auflösung</th>
+                  <th>Löschen</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <tr *ngFor="let picture of event.pictures">
                   <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
+                  <th>Name</th>
+                  <th>Format</th>
+                  <th>Auflösung</th>
+                  <th>Löschen</th>
                 </tr>
               </tbody>
             </table>
 
+          </div>
+        </div>
+      </mdb-tab>
+      <mdb-tab heading="<i class='fa fa-cog'></i> Event Einstellungen">
+        <div class="row">
+          <div class="col-12">
+            <br>
           </div>
         </div>
       </mdb-tab>
