WIP photographer dashboard

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 <header>
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark aqua-gradient">
+  <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark unique-color">
 
     <!-- Navbar brand -->
     <logo>
