--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -32,7 +32,7 @@
 
 
           <div class="text-center mb-3">
-            <button type="button" class="btn aqua-gradient btn-lg btn-block" (click)="loginWithCredentials()" id="button_login">Anmelden</button>
+            <button type="button" class="btn unique-color btn-lg btn-block" (click)="loginWithCredentials()" id="button_login">Anmelden</button>
           </div>
         </form>
         <p class="font-small dark-grey-text text-right d-flex justify-content-center mb-3 pt-2"> oder Anmelden mit:</p>
@@ -77,7 +77,7 @@
     <!--Content-->
     <div class="modal-content">
       <!--Header-->
-      <div class="modal-header aqua-gradient darken-3 white-text">
+      <div class="modal-header unique-color darken-3 white-text">
         <h4 class="title">Passwort zurücksetzen</h4>
         <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close" (click)="resetPasswordModal.hide()">
           <span aria-hidden="true">×</span>
