--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom aqua-gradient">
+<footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom unique-color">
   <!--Copyright-->
   <div class="footer-copyright">
     <div class="container-fluid">
