--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -16,7 +16,7 @@
         <form (ngSubmit)="loginWithCredentials()">
           <div class="md-form">
             <i class="fa fa-envelope prefix"></i>
-            <input mdbActive type="text" class="form-control" [(ngModel)]="email" id="input_email" name="email">
+            <input mdbActive type="email" class="form-control" [(ngModel)]="email" id="input_email" name="email">
             <label for="email" class="">Ihre E-Mail</label>
           </div>
 
@@ -86,7 +86,7 @@
       <div class="modal-body">
         <p>Geben Sie Ihre Email-Adresse an, an welche die Rücksetztmail gesendet werden soll</p>
         <div class="md-form">
-          <input mdbActive type="text" id="form1" class="form-control" [(ngModel)]="emailReset">
+          <input mdbActive type="email" id="form1" class="form-control" [(ngModel)]="emailReset">
           <label for="form1" class="">Email Adresse</label>
         </div>
 
