--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -45,31 +45,33 @@
 </div>
 <!--/-->
 <!--Event cards-->
-<div *ngFor="let event of events" class="col-lg-4 col-md-6">
+<div id="rowdesign" class="row">
+  <div *ngFor="let event of events" id="rowdesign" class="col-12 col-sm-4">
 
-  <!--Card-->
-  <div class="card card-cascade wider">
+    <!--Card-->
+    <div class="card card-cascade wider">
 
-    <!--Card image-->
-    <div class="view gradient-card-header peach-gradient">
-      <h2 class="h2-responsive mb-2">{{event.name}}</h2>
-      <p class="">
-        <i class="fa fa-calendar"></i>{{event.date}}</p>
+      <!--Card image-->
+      <div class="view gradient-card-header peach-gradient">
+        <h2 class="h2-responsive mb-2">{{event.name}}</h2>
+        <p class="">
+          <i class="fa fa-calendar"></i>&nbsp;{{event.date}}</p>
 
+      </div>
+      <!--/Card image-->
+
+      <!--Card content-->
+      <div class="card-body text-center">
+
+        <p class="card-text mr-2 ml-2">{{event.description}}</p>
+
+        <a href="#" class="orange-text mt-1 d-flex flex-row-reverse">
+          <h5 class="waves-effect p-2" mdbRippleRadius>View Pictures
+            <i class="fa fa-chevron-right"></i>
+          </h5>
+        </a>
+      </div>
+      <!--/.Card content-->
     </div>
-    <!--/Card image-->
-
-    <!--Card content-->
-    <div class="card-body text-center">
-
-      <p class="card-text mr-2 ml-2">{{event.description}}</p>
-
-      <a href="#" class="orange-text mt-1 d-flex flex-row-reverse">
-        <h5 class="waves-effect p-2" mdbRippleRadius>View Pictures
-          <i class="fa fa-chevron-right"></i>
-        </h5>
-      </a>
-    </div>
-    <!--/.Card content-->
   </div>
   <!--/.Card-->
