added shopping cart

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -52,6 +52,12 @@
             <span class="clearfix d-none d-sm-inline-block">Abmelden</span>
           </a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link waves-effect waves-light" routerLink="/cart">
+            <i class="fa fa-shopping-cart"></i>
+          </a>
+        </li>
       </ul>
 
 
