add imprint and data protection pages

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,24 @@
 <footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom unique-color">
+
+  <!--Footer Links-->
+  <div class="container">
+    <div class="row">
+
+      <!--Second column-->
+      <div class="col-md-6">
+        <ul>
+          <li>
+            <a routerLink="/imprint">Impressum</a>
+          </li>
+          <li>
+            <a routerLink="/data-protection">Datenschutzerklärung</a>
+          </li>
+        </ul>
+      </div>
+      <!--/.Second column-->
+    </div>
+  </div>
+  <!--/.Footer Links-->
   <!--Copyright-->
   <div class="footer-copyright">
     <div class="container-fluid">
