--- a/src/app/pages/imprint-page/imprint-page.component.html
+++ b/src/app/pages/imprint-page/imprint-page.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-5 pt-5">
   <div class="col text-center">
-    <h1>Imprint Page</h1>
+    <h1>Imprint Page!!</h1>
   </div>
 </div>
